# korin-new

./: .bumpversion.cfg  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/actions/build-cmake/: action.yml
.github/workflows/: unit-test.yml
cmake/: AddCXXCompilerFlag.cmake  DeclareExternalDependencies.cmake  GitUtils.cmake
scripts/: configure.sh
scripts/gdb-pp/: register.py  register_dev.py
scripts/gdb-pp/gdb_pp/: __init__.py  printer.py  types.py
src/: CMakeLists.txt
src/korin/: CMakeLists.txt  main.cpp  module.cmake.in  module.cpp.in
src/korin/core/: CMakeLists.txt
src/korin/core/private/containers/: hash_types.cpp
src/korin/core/private/hal/: malloc_ansi.cpp  malloc_pool.cpp  memalign.inl
src/korin/core/public/: core.h  core_types.h
src/korin/core/public/containers/: array.h  circular_queue.h  containers.h  containers.inl  containers_types.h  containers_types.inl  containers_utils.h  hash_map.h  hash_set.h  hash_table.h  hash_types.h  list.h  list_node.h  map.h  optional.h  pair.h  set.h  string.h  tree.h  tree_node.h  tuple.h
src/korin/core/public/generic/: platform.h  platform_math.h  platform_memory.h  platform_string.h
src/korin/core/public/hal/: malloc.h  malloc_ansi.h  malloc_pool.h  platform.h  platform_crt.h  platform_math.h  platform_memory.h  platform_string.h
src/korin/core/public/linux/: platform.h  platform_math.h  platform_memory.h  platform_string.h
src/korin/core/public/math/: mat3.h  mat4.h  math.h  math_types.h  projection_matrix.h  quat.h  transformation_matrix.h  vec2.h  vec3.h  vec4.h  view_matrix.h
src/korin/core/public/misc/: assert.h  build.h  console.h  logging.h
src/korin/core/public/templates/: enable_if.h  ordering.h  sequence.h  types.h  utility.h
src/korin/core/public/unix/: platform.h  platform_math.h  platform_memory.h  platform_string.h
test/: CMakeLists.txt
test/benches/: CMakeLists.txt  bench.cpp.in  bench.h.in  bench_containers.cpp  bench_containers.h
test/include/: debug_utils.h  testing.h
test/units/: CMakeLists.txt  test.cpp.in  test.h.in  unit.cpp.in  unit.h.in  unit_containers.cpp  unit_containers.h  unit_math.cpp  unit_math.h  unit_memory.cpp  unit_memory.h
